Begin work on drawGrid function

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
                 <button id="draw">Draw</button>      
             </div>
             <div>
-                <label for="BackgroundColor">BG color: </label>
-                <input type="color" id="BackgroundColor" value="gray">
+                <label for="backgroundColor">BG color: </label>
+                <input type="color" id="backgroundColor" value="gray">
             </div>
         </div>
         <div id="right">
             <div>
-                <label for="TrailColor">Trail color: </label>
-                <input type="color" id="TrailColor" value="yellow">
+                <label for="trailColor">Trail color: </label>
+                <input type="color" id="trailColor" value="yellow">
             </div>
             <div>
-                <label for="TrailDuration">Duration(s): </label>
-                <input type="text" name="" id="TrailDuration" size="1" maxlength="2">
+                <label for="trailDuration">Duration(s): </label>
+                <input type="text" name="" id="trailDuration" size="1" maxlength="2">
                 <button>Apply</button>
             </div>
         </div>
