Finish most of the features

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="inputs">
         <div id="left">
             <div>
-                <input type="text" id="cells" size="1" maxlength="3" placeholder="16">
+                <input type="text" id="gridSize" size="1" maxlength="3" value="16">
                 <button id="draw">Draw</button>      
             </div>
             <div>
@@ -26,7 +26,7 @@
             </div>
             <div>
                 <label for="trailDuration">Duration(s): </label>
-                <input type="text" name="" id="trailDuration" size="1" maxlength="2">
+                <input type="text" name="" id="trailDuration" size="1" value="1" maxlength="2">
                 <button>Apply</button>
             </div>
         </div>
