Change default background and trail colours to black and white

--- a/index.html
+++ b/index.html
@@ -16,18 +16,17 @@
             </div>
             <div>
                 <label for="backgroundColor">BG color: </label>
-                <input type="color" id="backgroundColor" value="gray">
+                <input type="color" id="backgroundColor" value="#000000">
             </div>
         </div>
         <div id="right">
             <div>
                 <label for="trailColor">Trail color: </label>
-                <input type="color" id="trailColor" value="yellow">
+                <input type="color" id="trailColor" value="#ffffff">
             </div>
             <div>
                 <label for="trailDuration">Duration(s): </label>
                 <input type="text" name="" id="trailDuration" size="1" value="1" maxlength="2">
-                <button>Apply</button>
             </div>
         </div>
     </div>
