Add randomized trail color feature

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div>
                 <label for="trailColor">Trail color: </label>
                 <input type="color" id="trailColor" value="#ffffff">
+                <button id="random">Randomize</button>
             </div>
             <div>
                 <label for="trailDuration">Duration(s): </label>
